--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1306,7 +1306,7 @@ input, select, textarea {
 	}
 
 	body {
-		background-image: url("images/overlay.png"), url("images/bg.jpg");
+		background-image: url("images/overlay.png"), url("images/artem-gainullov-neo3.jpg");
 		background-repeat: repeat, no-repeat;
 		background-size: auto, 100% 100%;
 		background-attachment: fixed;
@@ -2122,6 +2122,25 @@ input, select, textarea {
 						}
 
 				}
+/* Contact */
+
+	.social {
+		display: flex;
+		list-style-type: none;
+		justify-content: center;
+}
+
+	.social-item {
+		color: black;
+		opacity: 0.6;
+		transition: 0.3s;
+	}
+
+	.social-item:hover {
+		opacity: 1;
+	}
+
+
 
 /* Footer */
 
