--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -1,7 +1,13 @@
+.webgl-content * {border: 0; margin: 0; padding: 0}
+.webgl-content * {width: 100vw;}
+.webgl-content * {height: 100vh;}
+body {
+    overflow: hidden;
+}
+
 * {
     margin: 0;
     padding: 0;
-    overflow: hidden;
 }
 /* .webgl-content {position: absolute; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%);}
 
